עדכון הוראות: שמירת ציור ידני, מחיקת שטח, יישור גרירה למרכז, מובייל/דסקטופ

--- a/index.html
+++ b/index.html
@@ -320,6 +320,8 @@
                         <li><strong>גרירה:</strong> ניתן לגרור שטחים קיימים למיקומים חדשים על ידי לחיצה וגרירה בתוך השטח</li>
                         <li><strong>שכבות:</strong> שטחים יכולים לחפוף זה את זה - השטח האחרון שנוצר יהיה עליון</li>
                         <li><strong>צבעים:</strong> כל שטח נוצר בצבע שנבחר בפלטת הצבעים</li>
+                        <li><strong>מחיקת שטח:</strong> כששטח נבחר במצב יצירת שטח יופיע כפתור "🗑️ מחק שטח" למחיקתו</li>
+                        <li><strong>ציור ידני נשמר:</strong> ריבועים בודדים שציירת ידנית נשמרים גם כשמזיזים או מוחקים שטחים אוטומטיים</li>
                         <li><strong>חשוב:</strong> חובה ללחוץ "סיים יצירת שטח" לפני מעבר לריצוף!</li>
                     </ul>
                 </div>
@@ -342,7 +344,7 @@
                         <li><strong>התחלה:</strong> לחץ "התחל ריצוף" (רק אחרי לחיצה על "סיים יצירת שטח"!)</li>
                         <li><strong>תצוגה מקדימה:</strong> העבר עכבר על הגריד לראות איפה האריח יונח - ירוק = תקין, אדום = לא תקין</li>
                         <li><strong>הנחה:</strong> לחץ במיקום הרצוי להנחת האריח - האריח יקבל צבע אוטומטי</li>
-                        <li><strong>הזזה:</strong> לחץ "🔄 הזזת אריחים", בחר אריח (יהבהב באדום) ולחץ על מיקום חדש</li>
+                        <li><strong>הזזה:</strong> לחץ "🔄 הזזת אריחים", בחר אריח (יהבהב באדום) וגרור/לחץ למיקום חדש. הסמן מיושר למרכז האריח</li>
                         <li><strong>סיבוב:</strong> במצב הזזת אריחים, בחר אריח ולחץ "🔄 סובב אריח" או מקש R</li>
                         <li><strong>היפוך:</strong> במצב הזזת אריחים, בחר אריח ולחץ "🔃 הפוך אריח" או מקש F</li>
                         <li><strong>מחיקה:</strong> במצב הזזת אריחים, בחר אריח ולחץ "🗑️ מחק אריח" או Delete/Backspace</li>
@@ -350,6 +352,7 @@
                         <li><strong>ביטול ריצוף:</strong> "בטל ריצוף" חוזר למצב עיצוב רגיל</li>
                         <li><strong>השלמה:</strong> כשכל השטח הצבעוני מכוסה באריחים תקבל הודעת הצלחה!</li>
                         <li><strong>חשוב:</strong> אריחים מונחים רק על שטחים צבעוניים ולא יכולים לחפוף</li>
+                        <li><strong>מובייל/דסקטופ:</strong> גרירת האריח נעצרת בשחרור, אין צורך בהקשה נוספת</li>
                     </ul>
                 </div>
                 
@@ -371,7 +374,7 @@
                         <li><strong>סדר פעולות:</strong> יצירת שטח → סיום יצירת שטח → עיצוב אריח → התחלת ריצוף</li>
                         <li><strong>מגבלות מיקום:</strong> אריחים מונחים רק על שטחים צבעוניים (לא על רקע לבן)</li>
                         <li><strong>אי-חפיפה:</strong> אריחים לא יכולים לחפוף זה את זה או לצאת מגבולות הגריד</li>
-                        <li><strong>שמירת נתונים:</strong> השטחים נשמרים גם אחרי ניקוי הריצוף</li>
+                        <li><strong>שמירת נתונים:</strong> השטחים נשמרים גם אחרי ניקוי הריצוף, וציור ידני נשמר גם אחרי הזזת שטחים</li>
                         <li><strong>אופן הנחה:</strong> אריחים מונחים בלחיצה פשוטה - אין צורך בגרירה</li>
                         <li><strong>גרירת שטחים:</strong> ניתן לגרור שטחים רק במצב יצירת שטח</li>
                         <li><strong>עריכת אריחים:</strong> ניתן לגרור, לסובב ולהפוך אריחים רק במצב הזזת אריחים</li>
