--- a/index.html
+++ b/index.html
@@ -410,6 +410,173 @@
         let selectedTileForMove = null;
         let draggedTile = null;
 
+        // Organized toolbar injection and mode helpers
+        function buildOrganizedToolbar() {
+            try {
+                const app = document.querySelector('.max-w-7xl.mx-auto');
+                if (!app) return;
+                const oldToolbar = app.querySelector('.bg-white.p-4.rounded-lg.shadow-lg.mb-6');
+                const c = document.createElement('div');
+                c.innerHTML = '<div class="bg-white p-4 rounded-lg shadow-lg mb-6" id="organizedToolbar">\
+<div class="flex flex-col gap-3">\
+  <div class="flex flex-wrap items-center gap-3 justify-between">\
+    <div class="flex items-center gap-2">\
+      <span class="text-sm font-medium text-gray-700">היסטוריה</span>\
+      <button class="control-btn bg-gray-600 hover:bg-gray-700" onclick="undo()" id="undoBtn">↶ ביטול</button>\
+      <button class="control-btn bg-gray-600 hover:bg-gray-700" onclick="redo()" id="redoBtn">↷ חזרה</button>\
+    </div>\
+    <div class="flex items-center gap-2">\
+      <span class="text-sm font-medium text-gray-700">מצב</span>\
+      <div class="inline-flex gap-1" role="tablist">\
+        <button id="mode-target" class="px-3 py-1 text-sm rounded border border-gray-300 bg-white hover:bg-gray-50" onclick="setMode(\'target\')">ציור יעד</button>\
+        <button id="mode-tile" class="px-3 py-1 text-sm rounded border border-gray-300 bg-white hover:bg-gray-50" onclick="setMode(\'tile\')">עיצוב אריח</button>\
+        <button id="mode-tiling" class="px-3 py-1 text-sm rounded border border-gray-300 bg-white hover:bg-gray-50" onclick="setMode(\'tiling\')">ריצוף</button>\
+        <button id="mode-move" class="px-3 py-1 text-sm rounded border border-gray-300 bg-white hover:bg-gray-50" onclick="setMode(\'tiling\'); toggleTileMoveMode();">הזזת אריחים</button>\
+      </div>\
+    </div>\
+    <div class="flex items-center gap-2">\
+      <span class="text-sm font-medium text-gray-700">פעולות</span>\
+      <button class="control-btn bg-green-600 hover:bg-green-700" onclick="startTiling()">התחל ריצוף</button>\
+      <button class="control-btn bg-red-600 hover:bg-red-700" onclick="stopTiling()">בטל ריצוף</button>\
+      <button class="control-btn bg-slate-600 hover:bg-slate-700" onclick="clearTiling()">נקה ריצוף</button>\
+    </div>\
+    <div class="flex items-center gap-2">\
+      <span class="text-sm font-medium text-gray-700">תצוגה</span>\
+      <button id="zoomOutBtn" class="control-btn bg-gray-500 hover:bg-gray-600" title="Zoom Out">-</button>\
+      <input id="zoomSlider" type="range" min="0.5" max="3" step="0.1" value="1" class="w-40 align-middle" />\
+      <button id="zoomInBtn" class="control-btn bg-gray-500 hover:bg-gray-600" title="Zoom In">+</button>\
+      <span id="zoomValue" class="text-sm text-gray-600">100%</span>\
+    </div>\
+    <div class="flex items-center gap-2">\
+      <span class="text-sm font-medium text-gray-700">עזרה</span>\
+      <button class="control-btn bg-indigo-600 hover:bg-indigo-700" onclick="showInstructions()">📖 הוראות שימוש</button>\
+    </div>\
+  </div>\
+  <div id="moveBanner" class="hidden bg-yellow-50 border border-yellow-200 rounded p-2 text-sm text-yellow-900 flex items-center gap-2">\
+    <span>🔄 מצב הזזת אריחים פעיל</span>\
+    <span class="mx-1 text-yellow-700">•</span>\
+    <span>בחר/י אריח ואז השתמש/י בפעולות. קיצורים: R, F, Delete</span>\
+  </div>\
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-3">\
+    <section id="panel-target" class="bg-white border border-gray-200 rounded-lg p-3 shadow">\
+      <div class="flex items-center justify-between mb-2">\
+        <h2 class="text-sm font-medium text-gray-700">ציור יעד</h2>\
+        <div class="flex items-center gap-2">\
+          <button class="px-2 py-1 rounded bg-gray-100 text-gray-700 text-xs border" onclick="clearTarget()">נקה יעד</button>\
+        </div>\
+      </div>\
+      <div class="flex flex-wrap items-center gap-3">\
+        <div class="flex items-center gap-2">\
+          <span class="text-sm">צבע:</span>\
+          <div class="flex gap-2">\
+            <div class="color-btn selected" style="background-color: #fecaca" data-color="#fecaca"></div>\
+            <div class="color-btn" style="background-color: #bfdbfe" data-color="#bfdbfe"></div>\
+            <div class="color-btn" style="background-color: #bbf7d0" data-color="#bbf7d0"></div>\
+            <div class="color-btn" style="background-color: #fde68a" data-color="#fde68a"></div>\
+            <div class="color-btn" style="background-color: #ddd6fe" data-color="#ddd6fe"></div>\
+            <div class="color-btn" style="background-color: #fbcfe8" data-color="#fbcfe8"></div>\
+            <div class="color-btn" style="background-color: #ffffff; border-color: #374151" data-color="#ffffff"></div>\
+          </div>\
+        </div>\
+        <div class="flex items-center gap-2">\
+          <span class="text-sm">גודל אזור:</span>\
+          <input type="number" id="shapeWidth" value="10" min="1" max="30" class="w-16 px-2 py-1 border border-gray-300 rounded text-center">\
+          <span class="text-xs text-gray-500">×</span>\
+          <input type="number" id="shapeHeight" value="10" min="1" max="30" class="w-16 px-2 py-1 border border-gray-300 rounded text-center">\
+          <button class="control-btn bg-purple-600 hover:bg-purple-700" onclick="createAutoShape()">צור אזור אוטומטי</button>\
+          <button class="control-btn bg-orange-600 hover:bg-orange-700" onclick="finishShapeCreation()">סיום ציור</button>\
+          <button class="control-btn bg-red-600 hover:bg-red-700" id="deleteShapeBtn" onclick="deleteSelectedShape()" style="display: none;">מחק אזור</button>\
+        </div>\
+      </div>\
+    </section>\
+    <section id="panel-tile" class="bg-white border border-gray-200 rounded-lg p-3 shadow hidden">\
+      <div class="flex items-center justify-between mb-2">\
+        <h2 class="text-sm font-medium text-gray-700">עיצוב אריח</h2>\
+        <div class="flex items-center gap-2">\
+          <button class="px-2 py-1 rounded bg-gray-100 text-gray-700 text-xs border" onclick="clearTile()">נקה אריח</button>\
+        </div>\
+      </div>\
+      <div class="flex flex-wrap items-center gap-2">\
+        <button class="control-btn bg-blue-500 hover:bg-blue-600" onclick="rotateTile()">סובב 90°</button>\
+        <button class="control-btn bg-green-500 hover:bg-green-600" onclick="flipTile()">היפוך</button>\
+      </div>\
+    </section>\
+    <section id="panel-tiling" class="bg-white border border-gray-200 rounded-lg p-3 shadow hidden">\
+      <div class="flex items-center justify-between mb-2">\
+        <h2 class="text-sm font-medium text-gray-700">ניהול אריחים</h2>\
+        <div class="flex items-center gap-2">\
+          <button class="px-2 py-1 rounded bg-gray-100 text-gray-700 text-xs border" onclick="clearTiling()">נקה ריצוף</button>\
+        </div>\
+      </div>\
+      <div class="flex flex-wrap items-center gap-2 mb-2">\
+        <button id="moveToggle" class="control-btn bg-yellow-600 hover:bg-yellow-700" onclick="toggleTileMoveMode()">הפעל הזזת אריחים</button>\
+      </div>\
+      <div class="flex flex-wrap items-center gap-2">\
+        <button id="rotateTileBtn" class="control-btn bg-blue-500 hover:bg-blue-600" onclick="rotateSelectedTile()" style="display: none;">סובב אריח</button>\
+        <button id="flipTileBtn" class="control-btn bg-green-500 hover:bg-green-600" onclick="flipSelectedTile()" style="display: none;">היפוך אריח</button>\
+        <button id="deleteTileBtn" class="control-btn bg-red-500 hover:bg-red-600" onclick="deleteSelectedTile()" style="display: none;">מחק אריח</button>\
+      </div>\
+      <p class="mt-2 text-sm text-gray-500">במצב הזזה: לחץ על אריח כדי לבחור אותו. לאחר הבחירה הכפתורים יופיעו.</p>\
+    </section>\
+  </div>\
+  <div id="tilingStatus" class="mt-1 p-2 rounded text-center text-sm font-medium"></div>\
+</div>\
+</div>';
+                const newNode = c.firstElementChild;
+                if (!newNode) return;
+                if (oldToolbar) {
+                    app.insertBefore(newNode, oldToolbar);
+                    oldToolbar.style.display = 'none';
+                } else {
+                    app.prepend(newNode);
+                }
+            } catch (e) { console.warn('Failed to build organized toolbar', e); }
+        }
+
+        function setMode(name) {
+            try {
+                const modes = ['target','tile','tiling'];
+                modes.forEach(m => {
+                    const btn = document.getElementById('mode-' + m);
+                    if (btn) {
+                        btn.classList.toggle('bg-indigo-600', m === name);
+                        btn.classList.toggle('text-white', m === name);
+                        btn.classList.toggle('border-indigo-600', m === name);
+                    }
+                    const panel = document.getElementById('panel-' + m);
+                    if (panel) panel.classList.toggle('hidden', m !== name);
+                });
+                if (name === 'target') {
+                    if (typeof stopTiling === 'function') stopTiling();
+                    shapeCreationMode = true;
+                    updateGridTitle();
+                } else if (name === 'tile') {
+                    if (typeof stopTiling === 'function') stopTiling();
+                    shapeCreationMode = false;
+                    updateGridTitle();
+                } else if (name === 'tiling') {
+                    if (!tilingMode && typeof startTiling === 'function') startTiling();
+                }
+                updateMoveBanner();
+            } catch (e) { console.warn('setMode failed', e); }
+        }
+
+        function updateMoveBanner() {
+            try {
+                const banner = document.getElementById('moveBanner');
+                if (banner) banner.classList.toggle('hidden', !tileMoveMode);
+                const toggle = document.getElementById('moveToggle');
+                if (toggle) toggle.textContent = tileMoveMode ? 'כבה הזזת אריחים' : 'הפעל הזזת אריחים';
+            } catch (e) {}
+        }
+
+        // Build toolbar early so color buttons get listeners below
+        buildOrganizedToolbar();
+        // Initialize UI state
+        setMode('target');
+        updateMoveBanner();
+        try { setInterval(updateMoveBanner, 500); } catch(e) {}
+
         // Zoom controls for grid and tiles
         let zoom = 1;
         const zoomMin = 0.5;
