--- a/index.html
+++ b/index.html
@@ -572,6 +572,22 @@
 
         // Build toolbar early so color buttons get listeners below
         buildOrganizedToolbar();
+
+        // Add a quick "ציור יעד" button to the tiling panel header
+        function ensureTargetDrawButton() {
+            try {
+                const clearBtn = document.querySelector('#panel-tiling button[onclick="clearTiling()"]');
+                if (clearBtn && !document.getElementById('quickTargetModeBtn')) {
+                    const btn = document.createElement('button');
+                    btn.id = 'quickTargetModeBtn';
+                    btn.className = 'px-2 py-1 rounded bg-gray-100 text-gray-700 text-xs border';
+                    btn.textContent = 'ציור יעד';
+                    btn.onclick = () => setMode('target');
+                    clearBtn.parentElement.insertBefore(btn, clearBtn);
+                }
+            } catch (e) { /* ignore */ }
+        }
+        ensureTargetDrawButton();
         // Initialize UI state
         setMode('target');
         updateMoveBanner();
