הצגת כפתור 'ציור יעד' גלוי בסרגל העליון (מעבר מיידי למצב ציור יעד)

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
                 
                 <!-- כפתורי בקרה -->
                 <div class="flex gap-2">
+                    <button class="control-btn bg-slate-600 hover:bg-slate-700" onclick="setMode('target')">ציור יעד</button>
                     <button class="control-btn" onclick="clearTarget()">נקה שטח</button>
                     <button class="control-btn" onclick="clearTile()">נקה אריח</button>
                     <button class="control-btn" onclick="rotateTile()">סובב 90°</button>
